#3 Fixes navbar layout on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,7 +65,7 @@ img {
 
   display: block;
   margin: 0 auto;
-  max-width: 100%;
+  max-width: 40%;
   height: auto;
 }
 
@@ -82,7 +82,7 @@ blockquote {
 }
 
 .header {
-  padding: 20px 0;
+  padding: 15px 0;
   position: relative;
   background: #f5f5f5;
   border-bottom: 1px solid #eaeaea;
@@ -93,35 +93,43 @@ blockquote {
   margin: 0 auto;
   padding: 0 15px;
   font-family: 'Lato', sans-serif;
-  text-align: right;
 }
 
 .nav-logo {
-  float: left;
-  margin-top: -11px;
-  transition: transform 150ms ease-out;
+    transition: transform 150ms ease-out;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 39%;
+    width: 350px;
+    height: 100%;
 }
 
 .nav-logo:hover {
-  transform: scale(1.05 );
+    transform: scale(1.05 );
 }
 
 .nav-logo img {
-  width: 100%;
-  display: block;
-  max-height: 100px;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .nav-links {
+  display: inline-block;
+  vertical-align: middle;
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  min-width: 59%;
+  font-size: 18px;
   list-style: none;
+  text-align: right;
 }
 
 .nav-links li {
   display: inline-block;
-  margin: 0 0 0 15px;
+  margin: 0 0 0 25px;
 }
 
 .nav-links li:first-child {
@@ -462,26 +470,6 @@ blockquote {
   pre,
   code {
     font-size: 17px;
-  }
-
-  .header {
-    padding: 64px 0;
-  }
-
-  .nav-logo {
-    margin-top: -55px;
-  }
-
-  .nav-logo img {
-    max-height: 100px;
-  }
-
-  .nav-links {
-    font-size: 18px;
-  }
-
-  .nav-links li {
-    margin: 0 0 0 30px;
   }
 
   .content {
